external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_arg_count.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04016]: too few arguments
   ┌─ tests/move_2024/matching/invalid_arg_count.move:12:39
   │
12 │             E::A(x) | E::C(x, _, 0) | E::C(_, x) => x,
   │                                       ^^^^^^^^^^ Missing pattern for field '2' in '0x42::m::E::C'
